# nexus

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README_CN.md  README_JA.md  VERSIONING.md  rustfmt.toml
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
claude-code-api/: Cargo.toml
claude-code-api/src/: main.rs
claude-code-api/src/api/: chat.rs  confidence.rs  conversations.rs  mod.rs  models.rs  projects.rs  sessions.rs  stats.rs  streaming_handler.rs
claude-code-api/src/core/: auth.rs  cache.rs  claude_manager.rs  config.rs  conversation.rs  interactive_session.rs  mod.rs  objective_tracker.rs  process_pool.rs  retry.rs  session_manager.rs
claude-code-api/src/core/hooks/: mod.rs  neo4j_hook_callback.rs  neo4j_permission_provider.rs
claude-code-api/src/core/learning/: anonymize.rs  confidence.rs  critic.rs  episodes.rs  evolve.rs  mod.rs  types.rs
claude-code-api/src/core/memory/: long_term.rs  medium_term.rs  mod.rs  short_term.rs  traits.rs  unified.rs
claude-code-api/src/core/storage/: combined.rs  meilisearch.rs  memory.rs  mod.rs  neo4j.rs  tiered_cache.rs  traits.rs
claude-code-api/src/middleware/: error_handler.rs  mod.rs  request_id.rs
claude-code-api/src/models/: claude.rs  error.rs  mod.rs  openai.rs  tests.rs
claude-code-api/src/utils/: function_calling.rs  mod.rs  parser.rs  streaming.rs  text_chunker.rs
claude-code-sdk-rs/: Cargo.toml  README.md  README_CN.md  README_JA.md
claude-code-sdk-rs/examples/: account_info.rs  api_integration.rs  basic_client.rs  batch_processor.rs  check_current_account.rs  code_generator.rs  comprehensive_test.rs  control_format_demo.rs  control_protocol_demo.rs  file_operations.rs  hooks_typed.rs  init_test.rs  interactive.rs  interactive_debug.rs  interactive_demo.rs  interactive_memory_chat.rs  interactive_real_test.rs  interactive_test.rs  manual_interactive_test.rs  memory_chat.rs  model_selection_2025.rs  openai_compatible_server.rs  openai_compatible_with_history.rs  optimized_client_demo.rs  optimized_rest_server.rs  performance_benchmark.rs  performance_test.rs  permission_approval_demo.rs  permission_modes.rs  query_with_file_ops.rs  real_api_test.rs  rest_api_server.rs  rust_question_processor.rs  rust_question_processor_full.rs  sdk_mcp_calculator.rs  session_with_account_info.rs  simple_api_demo.rs  simple_model_test.rs  simple_query.rs  simple_real_test.rs  (+20 more)
claude-code-sdk-rs/src/: cli_download.rs  client.rs  client_working.rs  errors.rs  interactive.rs  internal_query.rs  lib.rs  message_parser.rs  model_recommendation.rs  optimized_client.rs  perf_utils.rs  query.rs  sdk_mcp.rs  token_tracker.rs  types.rs
claude-code-sdk-rs/src/memory/: integration.rs  message_document.rs  mod.rs  provider.rs  scoring.rs  tool_context.rs
claude-code-sdk-rs/src/transport/: mock.rs  mod.rs  subprocess.rs
claude-code-sdk-rs/tests/: control_protocol_e2e.rs  e2e_control.rs  e2e_hooks.rs  e2e_interrupt.rs  e2e_mcp.rs  e2e_permission_flow.rs  e2e_set_model_and_end_input.rs  e2e_set_permission_mode.rs  integration_test.rs  interactive_set_permission_mode.rs  memory_integration_test.rs  mock_api_test.rs  optimized_api_test.rs  streaming_test.rs  test_build_interrupt_json.rs  test_graceful_disconnect.rs  test_hook_types.rs  token_optimization_test.rs  unit_api_test.rs
docs/: CI_CD.md  RELEASE.md
