[workspace]
members = ["claude-code-api", "claude-code-sdk-rs"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["Théotime Rivière"]
license = "MIT"
repository = "https://github.com/this-rs/nexus"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
futures = "0.3"
async-trait = "0.1"
neo4rs = "0.8"
meilisearch-sdk = "0.27"
