[package]
name = "nexus-claude"
version = "0.5.0"
edition = "2024"
authors = [
    "Original: ZhangHanDong <psiace@outlook.com>",
    "Fork: Théotime Rivière"
]
license = "MIT"
description = "Claude Code SDK for Rust with persistent memory and autonomous context retrieval. Fork of cc-sdk."
repository = "https://github.com/this-rs/nexus"
documentation = "https://docs.rs/nexus-claude"
readme = "README.md"
keywords = ["claude", "nexus", "memory", "ai", "sdk", "mcp"]
categories = ["api-bindings", "asynchronous", "development-tools"]
exclude = ["examples/", "tests/", "doc/", "README_*.md", "*.sh", "*.py"]

# Fork notice: This is a fork of https://github.com/ZhangHanDong/claude-code-api-rs
# with additional features for persistent memory and autonomous context retrieval.

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
async-trait.workspace = true

# Local dependencies
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"
pin-project-lite = "0.2"
which = "6"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
async-stream = "0.3"
rand = "0.8"
crossbeam-channel = "0.5"
libc = "0.2"
# For auto-downloading CLI
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false, optional = true }
# For memory system
meilisearch-sdk = { version = "0.27", optional = true }
chrono = { version = "0.4", optional = true }

[features]
default = ["auto-download"]
# Enable automatic CLI download when not found
auto-download = ["reqwest"]
# Enable persistent memory system (Meilisearch-based)
memory = ["meilisearch-sdk", "chrono"]

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
chrono = "0.4"
regex = "1.10"
axum = "0.6"
tower-http = { version = "0.4", features = ["cors"] }
